PerlStone2015 - new Perl versions April 2016 results (fastmode)

--- a/results/perlstone2015-f/01overview-opmix1-FASTMODE.html
+++ b/results/perlstone2015-f/01overview-opmix1-FASTMODE.html
@@ -15,6 +15,11 @@
       "01overview.opmix1(F)/nothreads"
    ],
    [
+      "5.10.1",
+      null,
+      2.44
+   ],
+   [
       "5.13.1",
       2.65,
       2.43
@@ -125,6 +130,51 @@
       2.7
    ],
    [
+      "5.17.1",
+      2.29,
+      2.32
+   ],
+   [
+      "5.17.2",
+      2.79,
+      2.69
+   ],
+   [
+      "5.17.3",
+      2.82,
+      2.65
+   ],
+   [
+      "5.17.4",
+      2.65,
+      2.65
+   ],
+   [
+      "5.17.5",
+      2.67,
+      2.6
+   ],
+   [
+      "5.17.6",
+      2.69,
+      2.65
+   ],
+   [
+      "5.17.7",
+      2.69,
+      2.76
+   ],
+   [
+      "5.17.8",
+      2.89,
+      2.72
+   ],
+   [
+      "5.17.9",
+      2.75,
+      2.75
+   ],
+   [
       "5.18.0",
       2.68,
       2.61
@@ -133,6 +183,61 @@
       "5.18.4",
       2.68,
       2.6
+   ],
+   [
+      "5.19.1",
+      2.75,
+      2.75
+   ],
+   [
+      "5.19.2",
+      2.78,
+      2.72
+   ],
+   [
+      "5.19.3",
+      2.78,
+      2.81
+   ],
+   [
+      "5.19.4",
+      2.79,
+      2.84
+   ],
+   [
+      "5.19.5",
+      2.67,
+      2.69
+   ],
+   [
+      "5.19.6",
+      2.7,
+      2.71
+   ],
+   [
+      "5.19.7",
+      2.77,
+      2.69
+   ],
+   [
+      "5.19.8",
+      2.92,
+      2.8
+   ],
+   [
+      "5.19.9",
+      2.69,
+      2.55
+   ],
+   [
+      "5.19.10",
+      2.88,
+      2.66
+   ],
+   [
+      "5.19.11",
+      2.88,
+      2.64
    ],
    [
       "5.20.0",
@@ -257,7 +362,10 @@
     </script>
   </head>
   <body>
+    <h1>Perl::Formance - perlstone2015-f - 01overview.opmix1(F)</h1>
     <ul>
+        <li>Back to <a href="index.html">dashboard</a></li>
+        <li>Raw numbers: <a href="raw-numbers.txt">here</a></li>
         <li>Benchmark code: <a href="https://metacpan.org/pod/Benchmark::Perl::Formance::Plugin::PerlStone2015::01overview">Benchmark::Perl::Formance::Plugin::PerlStone2015::01overview</a></li>
     </ul>
     <div id="chart_div" style="width: 700px; height: 500px;"></div>
