--- a/results/perlstone2015-f/04control-blocks2-FASTMODE.html
+++ b/results/perlstone2015-f/04control-blocks2-FASTMODE.html
@@ -15,6 +15,11 @@
       "04control.blocks2(F)/nothreads"
    ],
    [
+      "5.10.1",
+      null,
+      4.84
+   ],
+   [
       "5.13.1",
       4.62,
       4.4
@@ -125,6 +130,51 @@
       4.92
    ],
    [
+      "5.17.1",
+      4.69,
+      4.42
+   ],
+   [
+      "5.17.2",
+      4.9,
+      4.35
+   ],
+   [
+      "5.17.3",
+      4.96,
+      4.4
+   ],
+   [
+      "5.17.4",
+      5,
+      4.31
+   ],
+   [
+      "5.17.5",
+      4.99,
+      4.59
+   ],
+   [
+      "5.17.6",
+      4.99,
+      4.72
+   ],
+   [
+      "5.17.7",
+      4.88,
+      4.48
+   ],
+   [
+      "5.17.8",
+      5.05,
+      4.52
+   ],
+   [
+      "5.17.9",
+      5.03,
+      4.52
+   ],
+   [
       "5.18.0",
       5.01,
       4.88
@@ -133,6 +183,61 @@
       "5.18.4",
       4.83,
       4.87
+   ],
+   [
+      "5.19.1",
+      5.02,
+      4.61
+   ],
+   [
+      "5.19.2",
+      4.97,
+      4.56
+   ],
+   [
+      "5.19.3",
+      4.97,
+      4.71
+   ],
+   [
+      "5.19.4",
+      5.07,
+      4.46
+   ],
+   [
+      "5.19.5",
+      4.89,
+      5.25
+   ],
+   [
+      "5.19.6",
+      5.19,
+      4.48
+   ],
+   [
+      "5.19.7",
+      4.96,
+      4.8
+   ],
+   [
+      "5.19.8",
+      5.04,
+      5.27
+   ],
+   [
+      "5.19.9",
+      5.46,
+      4.9
+   ],
+   [
+      "5.19.10",
+      5.08,
+      4.53
+   ],
+   [
+      "5.19.11",
+      5.08,
+      4.71
    ],
    [
       "5.20.0",
@@ -257,7 +362,10 @@
     </script>
   </head>
   <body>
+    <h1>Perl::Formance - perlstone2015-f - 04control.blocks2(F)</h1>
     <ul>
+        <li>Back to <a href="index.html">dashboard</a></li>
+        <li>Raw numbers: <a href="raw-numbers.txt">here</a></li>
         <li>Benchmark code: <a href="https://metacpan.org/pod/Benchmark::Perl::Formance::Plugin::PerlStone2015::04control">Benchmark::Perl::Formance::Plugin::PerlStone2015::04control</a></li>
     </ul>
     <div id="chart_div" style="width: 700px; height: 500px;"></div>
