--- a/results/perlstone2015-f/binarytrees-FASTMODE.html
+++ b/results/perlstone2015-f/binarytrees-FASTMODE.html
@@ -15,6 +15,11 @@
       "binarytrees(F)/nothreads"
    ],
    [
+      "5.10.1",
+      null,
+      1.64
+   ],
+   [
       "5.13.1",
       1.69,
       1.59
@@ -125,6 +130,51 @@
       1.64
    ],
    [
+      "5.17.1",
+      1.72,
+      1.57
+   ],
+   [
+      "5.17.2",
+      1.72,
+      1.6
+   ],
+   [
+      "5.17.3",
+      1.68,
+      1.6
+   ],
+   [
+      "5.17.4",
+      1.68,
+      1.6
+   ],
+   [
+      "5.17.5",
+      1.71,
+      1.58
+   ],
+   [
+      "5.17.6",
+      1.63,
+      1.53
+   ],
+   [
+      "5.17.7",
+      1.67,
+      1.56
+   ],
+   [
+      "5.17.8",
+      1.66,
+      1.61
+   ],
+   [
+      "5.17.9",
+      1.65,
+      1.56
+   ],
+   [
       "5.18.0",
       1.66,
       1.55
@@ -133,6 +183,61 @@
       "5.18.4",
       1.64,
       1.57
+   ],
+   [
+      "5.19.1",
+      1.63,
+      1.55
+   ],
+   [
+      "5.19.2",
+      1.65,
+      1.56
+   ],
+   [
+      "5.19.3",
+      1.6,
+      1.57
+   ],
+   [
+      "5.19.4",
+      1.61,
+      1.53
+   ],
+   [
+      "5.19.5",
+      1.62,
+      1.53
+   ],
+   [
+      "5.19.6",
+      1.67,
+      1.55
+   ],
+   [
+      "5.19.7",
+      1.64,
+      1.63
+   ],
+   [
+      "5.19.8",
+      1.6,
+      1.57
+   ],
+   [
+      "5.19.9",
+      1.68,
+      1.51
+   ],
+   [
+      "5.19.10",
+      1.6,
+      1.51
+   ],
+   [
+      "5.19.11",
+      1.62,
+      1.54
    ],
    [
       "5.20.0",
@@ -257,7 +362,10 @@
     </script>
   </head>
   <body>
+    <h1>Perl::Formance - perlstone2015-f - binarytrees(F)</h1>
     <ul>
+        <li>Back to <a href="index.html">dashboard</a></li>
+        <li>Raw numbers: <a href="raw-numbers.txt">here</a></li>
         <li>Benchmark code: <a href="https://metacpan.org/pod/Benchmark::Perl::Formance::Plugin::PerlStone2015::binarytrees">Benchmark::Perl::Formance::Plugin::PerlStone2015::binarytrees</a></li>
     </ul>
     <div id="chart_div" style="width: 700px; height: 500px;"></div>
