--- a/results/perlstone2015-f/fib-FASTMODE.html
+++ b/results/perlstone2015-f/fib-FASTMODE.html
@@ -15,6 +15,11 @@
       "fib(F)/nothreads"
    ],
    [
+      "5.10.1",
+      null,
+      2.22
+   ],
+   [
       "5.13.1",
       2.08,
       1.92
@@ -125,6 +130,51 @@
       2.02
    ],
    [
+      "5.17.1",
+      1.98,
+      2.2
+   ],
+   [
+      "5.17.2",
+      2.16,
+      2.08
+   ],
+   [
+      "5.17.3",
+      2.24,
+      1.91
+   ],
+   [
+      "5.17.4",
+      2.11,
+      1.88
+   ],
+   [
+      "5.17.5",
+      2.33,
+      1.87
+   ],
+   [
+      "5.17.6",
+      2.29,
+      1.97
+   ],
+   [
+      "5.17.7",
+      2.13,
+      2.01
+   ],
+   [
+      "5.17.8",
+      2.24,
+      1.96
+   ],
+   [
+      "5.17.9",
+      2.01,
+      2.05
+   ],
+   [
       "5.18.0",
       2,
       1.88
@@ -133,6 +183,61 @@
       "5.18.4",
       2.21,
       1.86
+   ],
+   [
+      "5.19.1",
+      1.94,
+      1.83
+   ],
+   [
+      "5.19.2",
+      2.14,
+      1.98
+   ],
+   [
+      "5.19.3",
+      2.4,
+      2.33
+   ],
+   [
+      "5.19.4",
+      2.47,
+      2.08
+   ],
+   [
+      "5.19.5",
+      2.62,
+      2.14
+   ],
+   [
+      "5.19.6",
+      2.45,
+      2.16
+   ],
+   [
+      "5.19.7",
+      2.31,
+      2.42
+   ],
+   [
+      "5.19.8",
+      2.38,
+      2.29
+   ],
+   [
+      "5.19.9",
+      2.31,
+      2.15
+   ],
+   [
+      "5.19.10",
+      2.23,
+      2.1
+   ],
+   [
+      "5.19.11",
+      2.26,
+      2.11
    ],
    [
       "5.20.0",
@@ -257,7 +362,10 @@
     </script>
   </head>
   <body>
+    <h1>Perl::Formance - perlstone2015-f - fib(F)</h1>
     <ul>
+        <li>Back to <a href="index.html">dashboard</a></li>
+        <li>Raw numbers: <a href="raw-numbers.txt">here</a></li>
         <li>Benchmark code: <a href="https://metacpan.org/pod/Benchmark::Perl::Formance::Plugin::PerlStone2015::fib">Benchmark::Perl::Formance::Plugin::PerlStone2015::fib</a></li>
     </ul>
     <div id="chart_div" style="width: 700px; height: 500px;"></div>
