--- a/results/perlstone2015-f/regex-backtrack-FASTMODE.html
+++ b/results/perlstone2015-f/regex-backtrack-FASTMODE.html
@@ -15,6 +15,11 @@
       "regex.backtrack(F)/nothreads"
    ],
    [
+      "5.10.1",
+      null,
+      2.09
+   ],
+   [
       "5.13.1",
       2.31,
       2.22
@@ -125,6 +130,51 @@
       2.24
    ],
    [
+      "5.17.1",
+      2.4,
+      2.16
+   ],
+   [
+      "5.17.2",
+      2.24,
+      2.14
+   ],
+   [
+      "5.17.3",
+      2.22,
+      2.34
+   ],
+   [
+      "5.17.4",
+      2.28,
+      2.14
+   ],
+   [
+      "5.17.5",
+      2.65,
+      2.54
+   ],
+   [
+      "5.17.6",
+      2.61,
+      2.62
+   ],
+   [
+      "5.17.7",
+      2.52,
+      2.72
+   ],
+   [
+      "5.17.8",
+      2.88,
+      2.84
+   ],
+   [
+      "5.17.9",
+      2.79,
+      2.63
+   ],
+   [
       "5.18.0",
       2.89,
       2.76
@@ -133,6 +183,61 @@
       "5.18.4",
       2.87,
       2.54
+   ],
+   [
+      "5.19.1",
+      2.65,
+      2.71
+   ],
+   [
+      "5.19.2",
+      2.78,
+      2.75
+   ],
+   [
+      "5.19.3",
+      2.64,
+      2.62
+   ],
+   [
+      "5.19.4",
+      2.68,
+      2.63
+   ],
+   [
+      "5.19.5",
+      2.81,
+      2.78
+   ],
+   [
+      "5.19.6",
+      2.71,
+      2.66
+   ],
+   [
+      "5.19.7",
+      2.63,
+      2.82
+   ],
+   [
+      "5.19.8",
+      2.54,
+      2.51
+   ],
+   [
+      "5.19.9",
+      2.92,
+      2.77
+   ],
+   [
+      "5.19.10",
+      2.75,
+      2.61
+   ],
+   [
+      "5.19.11",
+      2.77,
+      2.71
    ],
    [
       "5.20.0",
@@ -257,7 +362,10 @@
     </script>
   </head>
   <body>
+    <h1>Perl::Formance - perlstone2015-f - regex.backtrack(F)</h1>
     <ul>
+        <li>Back to <a href="index.html">dashboard</a></li>
+        <li>Raw numbers: <a href="raw-numbers.txt">here</a></li>
         <li>Benchmark code: <a href="https://metacpan.org/pod/Benchmark::Perl::Formance::Plugin::PerlStone2015::regex">Benchmark::Perl::Formance::Plugin::PerlStone2015::regex</a></li>
     </ul>
     <div id="chart_div" style="width: 700px; height: 500px;"></div>
