--- a/results/perlstone2015-f/regex-code_literal-FASTMODE.html
+++ b/results/perlstone2015-f/regex-code_literal-FASTMODE.html
@@ -15,6 +15,11 @@
       "regex.code_literal(F)/nothreads"
    ],
    [
+      "5.10.1",
+      null,
+      1.92
+   ],
+   [
       "5.13.1",
       2.4,
       1.97
@@ -125,6 +130,51 @@
       2.63
    ],
    [
+      "5.17.1",
+      2.79,
+      2.89
+   ],
+   [
+      "5.17.2",
+      3,
+      2.72
+   ],
+   [
+      "5.17.3",
+      2.82,
+      2.99
+   ],
+   [
+      "5.17.4",
+      2.76,
+      2.64
+   ],
+   [
+      "5.17.5",
+      2.72,
+      2.47
+   ],
+   [
+      "5.17.6",
+      2.62,
+      2.52
+   ],
+   [
+      "5.17.7",
+      2.74,
+      2.55
+   ],
+   [
+      "5.17.8",
+      2.76,
+      3.05
+   ],
+   [
+      "5.17.9",
+      2.91,
+      2.5
+   ],
+   [
       "5.18.0",
       2.69,
       2.51
@@ -133,6 +183,61 @@
       "5.18.4",
       2.88,
       3.04
+   ],
+   [
+      "5.19.1",
+      2.65,
+      2.54
+   ],
+   [
+      "5.19.2",
+      2.7,
+      2.58
+   ],
+   [
+      "5.19.3",
+      2.33,
+      2.44
+   ],
+   [
+      "5.19.4",
+      2.69,
+      2.29
+   ],
+   [
+      "5.19.5",
+      2.56,
+      2.5
+   ],
+   [
+      "5.19.6",
+      2.45,
+      2.37
+   ],
+   [
+      "5.19.7",
+      2.85,
+      2.76
+   ],
+   [
+      "5.19.8",
+      2.69,
+      3.03
+   ],
+   [
+      "5.19.9",
+      2.63,
+      2.75
+   ],
+   [
+      "5.19.10",
+      2.52,
+      2.75
+   ],
+   [
+      "5.19.11",
+      2.58,
+      2.5
    ],
    [
       "5.20.0",
@@ -257,7 +362,10 @@
     </script>
   </head>
   <body>
+    <h1>Perl::Formance - perlstone2015-f - regex.code_literal(F)</h1>
     <ul>
+        <li>Back to <a href="index.html">dashboard</a></li>
+        <li>Raw numbers: <a href="raw-numbers.txt">here</a></li>
         <li>Benchmark code: <a href="https://metacpan.org/pod/Benchmark::Perl::Formance::Plugin::PerlStone2015::regex">Benchmark::Perl::Formance::Plugin::PerlStone2015::regex</a></li>
     </ul>
     <div id="chart_div" style="width: 700px; height: 500px;"></div>
