--- a/results/perlstone2015-f/regex-precomp_access-FASTMODE.html
+++ b/results/perlstone2015-f/regex-precomp_access-FASTMODE.html
@@ -15,6 +15,11 @@
       "regex.precomp_access(F)/nothreads"
    ],
    [
+      "5.10.1",
+      null,
+      1.4
+   ],
+   [
       "5.13.1",
       1.8,
       1.55
@@ -125,6 +130,51 @@
       1.58
    ],
    [
+      "5.17.1",
+      1.67,
+      1.63
+   ],
+   [
+      "5.17.2",
+      1.56,
+      1.56
+   ],
+   [
+      "5.17.3",
+      1.8,
+      1.67
+   ],
+   [
+      "5.17.4",
+      1.59,
+      1.61
+   ],
+   [
+      "5.17.5",
+      1.75,
+      1.69
+   ],
+   [
+      "5.17.6",
+      1.55,
+      1.83
+   ],
+   [
+      "5.17.7",
+      1.68,
+      1.69
+   ],
+   [
+      "5.17.8",
+      1.81,
+      1.96
+   ],
+   [
+      "5.17.9",
+      2,
+      1.75
+   ],
+   [
       "5.18.0",
       1.63,
       1.57
@@ -133,6 +183,61 @@
       "5.18.4",
       1.71,
       1.77
+   ],
+   [
+      "5.19.1",
+      1.85,
+      1.86
+   ],
+   [
+      "5.19.2",
+      1.85,
+      1.73
+   ],
+   [
+      "5.19.3",
+      1.78,
+      1.93
+   ],
+   [
+      "5.19.4",
+      2.45,
+      1.75
+   ],
+   [
+      "5.19.5",
+      2.1,
+      1.69
+   ],
+   [
+      "5.19.6",
+      2.07,
+      1.94
+   ],
+   [
+      "5.19.7",
+      2.13,
+      1.87
+   ],
+   [
+      "5.19.8",
+      1.86,
+      1.88
+   ],
+   [
+      "5.19.9",
+      2.11,
+      1.9
+   ],
+   [
+      "5.19.10",
+      2.32,
+      2.04
+   ],
+   [
+      "5.19.11",
+      2.19,
+      2.08
    ],
    [
       "5.20.0",
@@ -257,7 +362,10 @@
     </script>
   </head>
   <body>
+    <h1>Perl::Formance - perlstone2015-f - regex.precomp_access(F)</h1>
     <ul>
+        <li>Back to <a href="index.html">dashboard</a></li>
+        <li>Raw numbers: <a href="raw-numbers.txt">here</a></li>
         <li>Benchmark code: <a href="https://metacpan.org/pod/Benchmark::Perl::Formance::Plugin::PerlStone2015::regex">Benchmark::Perl::Formance::Plugin::PerlStone2015::regex</a></li>
     </ul>
     <div id="chart_div" style="width: 700px; height: 500px;"></div>
