--- a/results/perlstone2015-f/regex-runtime_comp_nocache-FASTMODE.html
+++ b/results/perlstone2015-f/regex-runtime_comp_nocache-FASTMODE.html
@@ -15,6 +15,11 @@
       "regex.runtime_comp_nocache(F)/nothreads"
    ],
    [
+      "5.10.1",
+      null,
+      10.97
+   ],
+   [
       "5.13.1",
       12.05,
       11.73
@@ -125,6 +130,51 @@
       11.15
    ],
    [
+      "5.17.1",
+      13.25,
+      12.48
+   ],
+   [
+      "5.17.2",
+      13.27,
+      12.46
+   ],
+   [
+      "5.17.3",
+      14.28,
+      13.59
+   ],
+   [
+      "5.17.4",
+      13.16,
+      13.08
+   ],
+   [
+      "5.17.5",
+      14.13,
+      13.61
+   ],
+   [
+      "5.17.6",
+      13.29,
+      13.32
+   ],
+   [
+      "5.17.7",
+      13.75,
+      13.74
+   ],
+   [
+      "5.17.8",
+      13.56,
+      14.78
+   ],
+   [
+      "5.17.9",
+      15.14,
+      14.15
+   ],
+   [
       "5.18.0",
       13.11,
       14.88
@@ -133,6 +183,61 @@
       "5.18.4",
       13.56,
       13.85
+   ],
+   [
+      "5.19.1",
+      14.12,
+      14.23
+   ],
+   [
+      "5.19.2",
+      13.54,
+      13.6
+   ],
+   [
+      "5.19.3",
+      14.78,
+      13.24
+   ],
+   [
+      "5.19.4",
+      14.39,
+      13.38
+   ],
+   [
+      "5.19.5",
+      13.34,
+      13.57
+   ],
+   [
+      "5.19.6",
+      14.88,
+      14.13
+   ],
+   [
+      "5.19.7",
+      14.58,
+      13.57
+   ],
+   [
+      "5.19.8",
+      15.31,
+      14.08
+   ],
+   [
+      "5.19.9",
+      14.42,
+      13.57
+   ],
+   [
+      "5.19.10",
+      13.44,
+      14.16
+   ],
+   [
+      "5.19.11",
+      13.15,
+      15.06
    ],
    [
       "5.20.0",
@@ -257,7 +362,10 @@
     </script>
   </head>
   <body>
+    <h1>Perl::Formance - perlstone2015-f - regex.runtime_comp_nocache(F)</h1>
     <ul>
+        <li>Back to <a href="index.html">dashboard</a></li>
+        <li>Raw numbers: <a href="raw-numbers.txt">here</a></li>
         <li>Benchmark code: <a href="https://metacpan.org/pod/Benchmark::Perl::Formance::Plugin::PerlStone2015::regex">Benchmark::Perl::Formance::Plugin::PerlStone2015::regex</a></li>
     </ul>
     <div id="chart_div" style="width: 700px; height: 500px;"></div>
