--- a/results/perlstone2015-f/01overview-opmix2-FASTMODE.html
+++ b/results/perlstone2015-f/01overview-opmix2-FASTMODE.html
@@ -15,6 +15,11 @@
       "01overview.opmix2(F)/nothreads"
    ],
    [
+      "5.10.1",
+      null,
+      2.5
+   ],
+   [
       "5.13.1",
       2.75,
       2.5
@@ -125,6 +130,51 @@
       2.75
    ],
    [
+      "5.17.1",
+      2.35,
+      2.35
+   ],
+   [
+      "5.17.2",
+      2.84,
+      2.72
+   ],
+   [
+      "5.17.3",
+      2.87,
+      2.69
+   ],
+   [
+      "5.17.4",
+      2.69,
+      2.69
+   ],
+   [
+      "5.17.5",
+      2.74,
+      2.65
+   ],
+   [
+      "5.17.6",
+      2.73,
+      2.7
+   ],
+   [
+      "5.17.7",
+      2.72,
+      2.81
+   ],
+   [
+      "5.17.8",
+      2.85,
+      2.77
+   ],
+   [
+      "5.17.9",
+      2.81,
+      2.78
+   ],
+   [
       "5.18.0",
       2.73,
       2.66
@@ -133,6 +183,61 @@
       "5.18.4",
       2.74,
       2.65
+   ],
+   [
+      "5.19.1",
+      2.8,
+      2.79
+   ],
+   [
+      "5.19.2",
+      2.8,
+      2.76
+   ],
+   [
+      "5.19.3",
+      2.83,
+      2.85
+   ],
+   [
+      "5.19.4",
+      2.81,
+      2.88
+   ],
+   [
+      "5.19.5",
+      2.73,
+      2.74
+   ],
+   [
+      "5.19.6",
+      2.75,
+      2.75
+   ],
+   [
+      "5.19.7",
+      2.8,
+      2.75
+   ],
+   [
+      "5.19.8",
+      2.79,
+      2.85
+   ],
+   [
+      "5.19.9",
+      2.73,
+      2.4
+   ],
+   [
+      "5.19.10",
+      2.77,
+      2.72
+   ],
+   [
+      "5.19.11",
+      2.72,
+      2.71
    ],
    [
       "5.20.0",
@@ -257,7 +362,10 @@
     </script>
   </head>
   <body>
+    <h1>Perl::Formance - perlstone2015-f - 01overview.opmix2(F)</h1>
     <ul>
+        <li>Back to <a href="index.html">dashboard</a></li>
+        <li>Raw numbers: <a href="raw-numbers.txt">here</a></li>
         <li>Benchmark code: <a href="https://metacpan.org/pod/Benchmark::Perl::Formance::Plugin::PerlStone2015::01overview">Benchmark::Perl::Formance::Plugin::PerlStone2015::01overview</a></li>
     </ul>
     <div id="chart_div" style="width: 700px; height: 500px;"></div>
