--- a/results/perlstone2015-f/04control-blocks1-FASTMODE.html
+++ b/results/perlstone2015-f/04control-blocks1-FASTMODE.html
@@ -15,6 +15,11 @@
       "04control.blocks1(F)/nothreads"
    ],
    [
+      "5.10.1",
+      null,
+      5.89
+   ],
+   [
       "5.13.1",
       5.28,
       4.74
@@ -125,6 +130,51 @@
       6.72
    ],
    [
+      "5.17.1",
+      5.4,
+      5.04
+   ],
+   [
+      "5.17.2",
+      5.45,
+      5.03
+   ],
+   [
+      "5.17.3",
+      5.49,
+      5.53
+   ],
+   [
+      "5.17.4",
+      5.27,
+      5.04
+   ],
+   [
+      "5.17.5",
+      5.29,
+      5.08
+   ],
+   [
+      "5.17.6",
+      6.28,
+      5.77
+   ],
+   [
+      "5.17.7",
+      6.19,
+      5.73
+   ],
+   [
+      "5.17.8",
+      6.25,
+      5.65
+   ],
+   [
+      "5.17.9",
+      6.21,
+      6.55
+   ],
+   [
       "5.18.0",
       6.21,
       5.75
@@ -133,6 +183,61 @@
       "5.18.4",
       6.23,
       6.46
+   ],
+   [
+      "5.19.1",
+      6.37,
+      5.8
+   ],
+   [
+      "5.19.2",
+      6.22,
+      5.77
+   ],
+   [
+      "5.19.3",
+      6.35,
+      5.84
+   ],
+   [
+      "5.19.4",
+      6.1,
+      5.77
+   ],
+   [
+      "5.19.5",
+      6.12,
+      5.75
+   ],
+   [
+      "5.19.6",
+      6.15,
+      5.84
+   ],
+   [
+      "5.19.7",
+      6.12,
+      6.27
+   ],
+   [
+      "5.19.8",
+      6.14,
+      5.83
+   ],
+   [
+      "5.19.9",
+      6.15,
+      5.81
+   ],
+   [
+      "5.19.10",
+      6.07,
+      5.73
+   ],
+   [
+      "5.19.11",
+      6.54,
+      5.7
    ],
    [
       "5.20.0",
@@ -257,7 +362,10 @@
     </script>
   </head>
   <body>
+    <h1>Perl::Formance - perlstone2015-f - 04control.blocks1(F)</h1>
     <ul>
+        <li>Back to <a href="index.html">dashboard</a></li>
+        <li>Raw numbers: <a href="raw-numbers.txt">here</a></li>
         <li>Benchmark code: <a href="https://metacpan.org/pod/Benchmark::Perl::Formance::Plugin::PerlStone2015::04control">Benchmark::Perl::Formance::Plugin::PerlStone2015::04control</a></li>
     </ul>
     <div id="chart_div" style="width: 700px; height: 500px;"></div>
