--- a/results/perlstone2015-f/05regex-fixedstr-FASTMODE.html
+++ b/results/perlstone2015-f/05regex-fixedstr-FASTMODE.html
@@ -15,6 +15,11 @@
       "05regex.fixedstr(F)/nothreads"
    ],
    [
+      "5.10.1",
+      null,
+      2.66
+   ],
+   [
       "5.13.1",
       2.66,
       2.66
@@ -125,6 +130,51 @@
       2.79
    ],
    [
+      "5.17.1",
+      2.66,
+      2.79
+   ],
+   [
+      "5.17.2",
+      2.66,
+      2.81
+   ],
+   [
+      "5.17.3",
+      2.66,
+      2.8
+   ],
+   [
+      "5.17.4",
+      2.66,
+      2.79
+   ],
+   [
+      "5.17.5",
+      2.66,
+      2.79
+   ],
+   [
+      "5.17.6",
+      2.66,
+      2.79
+   ],
+   [
+      "5.17.7",
+      2.75,
+      2.89
+   ],
+   [
+      "5.17.8",
+      2.76,
+      2.91
+   ],
+   [
+      "5.17.9",
+      2.77,
+      2.88
+   ],
+   [
       "5.18.0",
       2.66,
       2.79
@@ -133,6 +183,61 @@
       "5.18.4",
       2.66,
       2.79
+   ],
+   [
+      "5.19.1",
+      2.74,
+      2.88
+   ],
+   [
+      "5.19.2",
+      2.74,
+      2.88
+   ],
+   [
+      "5.19.3",
+      2.66,
+      2.79
+   ],
+   [
+      "5.19.4",
+      2.66,
+      2.8
+   ],
+   [
+      "5.19.5",
+      2.66,
+      2.79
+   ],
+   [
+      "5.19.6",
+      2.66,
+      2.79
+   ],
+   [
+      "5.19.7",
+      2.67,
+      2.79
+   ],
+   [
+      "5.19.8",
+      2.66,
+      2.8
+   ],
+   [
+      "5.19.9",
+      2.67,
+      2.79
+   ],
+   [
+      "5.19.10",
+      2.67,
+      2.79
+   ],
+   [
+      "5.19.11",
+      2.67,
+      2.8
    ],
    [
       "5.20.0",
@@ -257,7 +362,10 @@
     </script>
   </head>
   <body>
+    <h1>Perl::Formance - perlstone2015-f - 05regex.fixedstr(F)</h1>
     <ul>
+        <li>Back to <a href="index.html">dashboard</a></li>
+        <li>Raw numbers: <a href="raw-numbers.txt">here</a></li>
         <li>Benchmark code: <a href="https://metacpan.org/pod/Benchmark::Perl::Formance::Plugin::PerlStone2015::05regex">Benchmark::Perl::Formance::Plugin::PerlStone2015::05regex</a></li>
     </ul>
     <div id="chart_div" style="width: 700px; height: 500px;"></div>
