--- a/results/perlstone2015-f/07lists-push-FASTMODE.html
+++ b/results/perlstone2015-f/07lists-push-FASTMODE.html
@@ -15,6 +15,11 @@
       "07lists.push(F)/nothreads"
    ],
    [
+      "5.10.1",
+      null,
+      2.6
+   ],
+   [
       "5.13.1",
       2.58,
       2.54
@@ -125,6 +130,51 @@
       2.62
    ],
    [
+      "5.17.1",
+      2.62,
+      2.56
+   ],
+   [
+      "5.17.2",
+      2.71,
+      2.62
+   ],
+   [
+      "5.17.3",
+      2.82,
+      2.64
+   ],
+   [
+      "5.17.4",
+      2.57,
+      2.56
+   ],
+   [
+      "5.17.5",
+      2.65,
+      2.6
+   ],
+   [
+      "5.17.6",
+      2.63,
+      2.56
+   ],
+   [
+      "5.17.7",
+      2.68,
+      2.6
+   ],
+   [
+      "5.17.8",
+      2.62,
+      2.66
+   ],
+   [
+      "5.17.9",
+      2.72,
+      2.62
+   ],
+   [
       "5.18.0",
       2.68,
       2.57
@@ -133,6 +183,61 @@
       "5.18.4",
       2.61,
       2.6
+   ],
+   [
+      "5.19.1",
+      2.68,
+      2.61
+   ],
+   [
+      "5.19.2",
+      2.65,
+      2.64
+   ],
+   [
+      "5.19.3",
+      2.65,
+      2.62
+   ],
+   [
+      "5.19.4",
+      2.68,
+      2.61
+   ],
+   [
+      "5.19.5",
+      2.61,
+      2.61
+   ],
+   [
+      "5.19.6",
+      2.78,
+      2.62
+   ],
+   [
+      "5.19.7",
+      2.72,
+      2.64
+   ],
+   [
+      "5.19.8",
+      2.68,
+      2.76
+   ],
+   [
+      "5.19.9",
+      2.65,
+      2.64
+   ],
+   [
+      "5.19.10",
+      2.62,
+      2.61
+   ],
+   [
+      "5.19.11",
+      2.62,
+      2.64
    ],
    [
       "5.20.0",
@@ -257,7 +362,10 @@
     </script>
   </head>
   <body>
+    <h1>Perl::Formance - perlstone2015-f - 07lists.push(F)</h1>
     <ul>
+        <li>Back to <a href="index.html">dashboard</a></li>
+        <li>Raw numbers: <a href="raw-numbers.txt">here</a></li>
         <li>Benchmark code: <a href="https://metacpan.org/pod/Benchmark::Perl::Formance::Plugin::PerlStone2015::07lists">Benchmark::Perl::Formance::Plugin::PerlStone2015::07lists</a></li>
     </ul>
     <div id="chart_div" style="width: 700px; height: 500px;"></div>
