--- a/results/perlstone2015-f/09data-a_alloc-FASTMODE.html
+++ b/results/perlstone2015-f/09data-a_alloc-FASTMODE.html
@@ -15,6 +15,11 @@
       "09data.a_alloc(F)/nothreads"
    ],
    [
+      "5.10.1",
+      null,
+      7.46
+   ],
+   [
       "5.13.1",
       4.64,
       4.66
@@ -125,6 +130,51 @@
       4.63
    ],
    [
+      "5.17.1",
+      4.87,
+      4.75
+   ],
+   [
+      "5.17.2",
+      4.88,
+      4.65
+   ],
+   [
+      "5.17.3",
+      4.87,
+      4.85
+   ],
+   [
+      "5.17.4",
+      4.87,
+      4.61
+   ],
+   [
+      "5.17.5",
+      4.87,
+      4.89
+   ],
+   [
+      "5.17.6",
+      4.86,
+      4.89
+   ],
+   [
+      "5.17.7",
+      5.02,
+      5.02
+   ],
+   [
+      "5.17.8",
+      5.01,
+      4.58
+   ],
+   [
+      "5.17.9",
+      5.01,
+      4.58
+   ],
+   [
       "5.18.0",
       5.01,
       4.57
@@ -133,6 +183,61 @@
       "5.18.4",
       5.01,
       4.81
+   ],
+   [
+      "5.19.1",
+      4.81,
+      4.58
+   ],
+   [
+      "5.19.2",
+      4.81,
+      4.81
+   ],
+   [
+      "5.19.3",
+      4.83,
+      4.58
+   ],
+   [
+      "5.19.4",
+      4.14,
+      4.14
+   ],
+   [
+      "5.19.5",
+      4.12,
+      4.35
+   ],
+   [
+      "5.19.6",
+      4.13,
+      4.13
+   ],
+   [
+      "5.19.7",
+      4.12,
+      4.37
+   ],
+   [
+      "5.19.8",
+      4.35,
+      4.35
+   ],
+   [
+      "5.19.9",
+      4.35,
+      4.13
+   ],
+   [
+      "5.19.10",
+      4.12,
+      4.45
+   ],
+   [
+      "5.19.11",
+      4.13,
+      4.13
    ],
    [
       "5.20.0",
@@ -257,7 +362,10 @@
     </script>
   </head>
   <body>
+    <h1>Perl::Formance - perlstone2015-f - 09data.a_alloc(F)</h1>
     <ul>
+        <li>Back to <a href="index.html">dashboard</a></li>
+        <li>Raw numbers: <a href="raw-numbers.txt">here</a></li>
         <li>Benchmark code: <a href="https://metacpan.org/pod/Benchmark::Perl::Formance::Plugin::PerlStone2015::09data">Benchmark::Perl::Formance::Plugin::PerlStone2015::09data</a></li>
     </ul>
     <div id="chart_div" style="width: 700px; height: 500px;"></div>
