--- a/results/perlstone2015-f/09data-a_copy-FASTMODE.html
+++ b/results/perlstone2015-f/09data-a_copy-FASTMODE.html
@@ -15,6 +15,11 @@
       "09data.a_copy(F)/nothreads"
    ],
    [
+      "5.10.1",
+      null,
+      3.58
+   ],
+   [
       "5.13.1",
       3.8,
       3.72
@@ -125,6 +130,51 @@
       3.73
    ],
    [
+      "5.17.1",
+      3.62,
+      3.6
+   ],
+   [
+      "5.17.2",
+      3.66,
+      3.73
+   ],
+   [
+      "5.17.3",
+      3.6,
+      3.61
+   ],
+   [
+      "5.17.4",
+      3.56,
+      3.57
+   ],
+   [
+      "5.17.5",
+      3.69,
+      3.89
+   ],
+   [
+      "5.17.6",
+      3.93,
+      3.79
+   ],
+   [
+      "5.17.7",
+      3.92,
+      3.67
+   ],
+   [
+      "5.17.8",
+      3.89,
+      3.68
+   ],
+   [
+      "5.17.9",
+      3.93,
+      3.65
+   ],
+   [
       "5.18.0",
       3.85,
       3.73
@@ -133,6 +183,61 @@
       "5.18.4",
       3.82,
       3.72
+   ],
+   [
+      "5.19.1",
+      3.98,
+      3.79
+   ],
+   [
+      "5.19.2",
+      4.08,
+      3.76
+   ],
+   [
+      "5.19.3",
+      3.97,
+      3.79
+   ],
+   [
+      "5.19.4",
+      3.98,
+      3.76
+   ],
+   [
+      "5.19.5",
+      4.03,
+      3.73
+   ],
+   [
+      "5.19.6",
+      6.45,
+      3.7
+   ],
+   [
+      "5.19.7",
+      5.03,
+      3.82
+   ],
+   [
+      "5.19.8",
+      4.07,
+      3.72
+   ],
+   [
+      "5.19.9",
+      4.04,
+      3.68
+   ],
+   [
+      "5.19.10",
+      4,
+      3.75
+   ],
+   [
+      "5.19.11",
+      4,
+      3.74
    ],
    [
       "5.20.0",
@@ -257,7 +362,10 @@
     </script>
   </head>
   <body>
+    <h1>Perl::Formance - perlstone2015-f - 09data.a_copy(F)</h1>
     <ul>
+        <li>Back to <a href="index.html">dashboard</a></li>
+        <li>Raw numbers: <a href="raw-numbers.txt">here</a></li>
         <li>Benchmark code: <a href="https://metacpan.org/pod/Benchmark::Perl::Formance::Plugin::PerlStone2015::09data">Benchmark::Perl::Formance::Plugin::PerlStone2015::09data</a></li>
     </ul>
     <div id="chart_div" style="width: 700px; height: 500px;"></div>
