--- a/results/perlstone2015-f/fannkuch-FASTMODE.html
+++ b/results/perlstone2015-f/fannkuch-FASTMODE.html
@@ -102,12 +102,92 @@
       4.47
    ],
    [
+      "5.17.1",
+      14.75
+   ],
+   [
+      "5.17.2",
+      11.39
+   ],
+   [
+      "5.17.3",
+      11.19
+   ],
+   [
+      "5.17.4",
+      10.16
+   ],
+   [
+      "5.17.5",
+      10.26
+   ],
+   [
+      "5.17.6",
+      4.4
+   ],
+   [
+      "5.17.7",
+      1.74
+   ],
+   [
+      "5.17.8",
+      1.75
+   ],
+   [
+      "5.17.9",
+      1.76
+   ],
+   [
       "5.18.0",
       4.44
    ],
    [
       "5.18.4",
       4.46
+   ],
+   [
+      "5.19.1",
+      1.71
+   ],
+   [
+      "5.19.2",
+      1.74
+   ],
+   [
+      "5.19.3",
+      1.76
+   ],
+   [
+      "5.19.4",
+      1.73
+   ],
+   [
+      "5.19.5",
+      1.73
+   ],
+   [
+      "5.19.6",
+      1.74
+   ],
+   [
+      "5.19.7",
+      1.75
+   ],
+   [
+      "5.19.8",
+      1.75
+   ],
+   [
+      "5.19.9",
+      1.76
+   ],
+   [
+      "5.19.10",
+      1.74
+   ],
+   [
+      "5.19.11",
+      1.73
    ],
    [
       "5.20.0",
@@ -211,7 +291,10 @@
     </script>
   </head>
   <body>
+    <h1>Perl::Formance - perlstone2015-f - fannkuch(F)</h1>
     <ul>
+        <li>Back to <a href="index.html">dashboard</a></li>
+        <li>Raw numbers: <a href="raw-numbers.txt">here</a></li>
         <li>Benchmark code: <a href="https://metacpan.org/pod/Benchmark::Perl::Formance::Plugin::PerlStone2015::fannkuch">Benchmark::Perl::Formance::Plugin::PerlStone2015::fannkuch</a></li>
     </ul>
     <div id="chart_div" style="width: 700px; height: 500px;"></div>
