--- a/results/perlstone2015-f/mandelbrot-FASTMODE.html
+++ b/results/perlstone2015-f/mandelbrot-FASTMODE.html
@@ -102,12 +102,92 @@
       1.95
    ],
    [
+      "5.17.1",
+      5.83
+   ],
+   [
+      "5.17.2",
+      4.75
+   ],
+   [
+      "5.17.3",
+      4.53
+   ],
+   [
+      "5.17.4",
+      4.37
+   ],
+   [
+      "5.17.5",
+      4.32
+   ],
+   [
+      "5.17.6",
+      1.96
+   ],
+   [
+      "5.17.7",
+      0.97
+   ],
+   [
+      "5.17.8",
+      0.97
+   ],
+   [
+      "5.17.9",
+      0.95
+   ],
+   [
       "5.18.0",
       1.96
    ],
    [
       "5.18.4",
       1.97
+   ],
+   [
+      "5.19.1",
+      0.94
+   ],
+   [
+      "5.19.2",
+      0.95
+   ],
+   [
+      "5.19.3",
+      0.96
+   ],
+   [
+      "5.19.4",
+      0.95
+   ],
+   [
+      "5.19.5",
+      0.95
+   ],
+   [
+      "5.19.6",
+      0.94
+   ],
+   [
+      "5.19.7",
+      0.96
+   ],
+   [
+      "5.19.8",
+      0.94
+   ],
+   [
+      "5.19.9",
+      0.96
+   ],
+   [
+      "5.19.10",
+      0.97
+   ],
+   [
+      "5.19.11",
+      0.96
    ],
    [
       "5.20.0",
@@ -211,7 +291,10 @@
     </script>
   </head>
   <body>
+    <h1>Perl::Formance - perlstone2015-f - mandelbrot(F)</h1>
     <ul>
+        <li>Back to <a href="index.html">dashboard</a></li>
+        <li>Raw numbers: <a href="raw-numbers.txt">here</a></li>
         <li>Benchmark code: <a href="https://metacpan.org/pod/Benchmark::Perl::Formance::Plugin::PerlStone2015::mandelbrot">Benchmark::Perl::Formance::Plugin::PerlStone2015::mandelbrot</a></li>
     </ul>
     <div id="chart_div" style="width: 700px; height: 500px;"></div>
