--- a/results/perlstone2015-f/nbody-FASTMODE.html
+++ b/results/perlstone2015-f/nbody-FASTMODE.html
@@ -15,6 +15,11 @@
       "nbody(F)/nothreads"
    ],
    [
+      "5.10.1",
+      null,
+      3.17
+   ],
+   [
       "5.13.1",
       3.23,
       3.06
@@ -125,6 +130,51 @@
       2.86
    ],
    [
+      "5.17.1",
+      2.89,
+      2.84
+   ],
+   [
+      "5.17.2",
+      3.02,
+      2.82
+   ],
+   [
+      "5.17.3",
+      2.99,
+      2.92
+   ],
+   [
+      "5.17.4",
+      2.91,
+      2.76
+   ],
+   [
+      "5.17.5",
+      3.01,
+      2.78
+   ],
+   [
+      "5.17.6",
+      3.05,
+      2.84
+   ],
+   [
+      "5.17.7",
+      3.02,
+      2.92
+   ],
+   [
+      "5.17.8",
+      3,
+      2.88
+   ],
+   [
+      "5.17.9",
+      3.09,
+      2.96
+   ],
+   [
       "5.18.0",
       3.08,
       2.97
@@ -133,6 +183,61 @@
       "5.18.4",
       3.08,
       3
+   ],
+   [
+      "5.19.1",
+      2.97,
+      2.9
+   ],
+   [
+      "5.19.2",
+      3.07,
+      2.87
+   ],
+   [
+      "5.19.3",
+      3.21,
+      2.86
+   ],
+   [
+      "5.19.4",
+      3.09,
+      2.81
+   ],
+   [
+      "5.19.5",
+      3.04,
+      2.88
+   ],
+   [
+      "5.19.6",
+      3.07,
+      2.92
+   ],
+   [
+      "5.19.7",
+      2.95,
+      2.99
+   ],
+   [
+      "5.19.8",
+      3.02,
+      2.84
+   ],
+   [
+      "5.19.9",
+      2.95,
+      2.86
+   ],
+   [
+      "5.19.10",
+      3.02,
+      2.9
+   ],
+   [
+      "5.19.11",
+      3.05,
+      2.91
    ],
    [
       "5.20.0",
@@ -257,7 +362,10 @@
     </script>
   </head>
   <body>
+    <h1>Perl::Formance - perlstone2015-f - nbody(F)</h1>
     <ul>
+        <li>Back to <a href="index.html">dashboard</a></li>
+        <li>Raw numbers: <a href="raw-numbers.txt">here</a></li>
         <li>Benchmark code: <a href="https://metacpan.org/pod/Benchmark::Perl::Formance::Plugin::PerlStone2015::nbody">Benchmark::Perl::Formance::Plugin::PerlStone2015::nbody</a></li>
     </ul>
     <div id="chart_div" style="width: 700px; height: 500px;"></div>
