--- a/results/perlstone2015-f/regex-code_runtime-FASTMODE.html
+++ b/results/perlstone2015-f/regex-code_runtime-FASTMODE.html
@@ -15,6 +15,11 @@
       "regex.code_runtime(F)/nothreads"
    ],
    [
+      "5.10.1",
+      null,
+      0.04
+   ],
+   [
       "5.13.1",
       0.05,
       0.05
@@ -125,6 +130,51 @@
       0.05
    ],
    [
+      "5.17.1",
+      1.47,
+      1.46
+   ],
+   [
+      "5.17.2",
+      1.5,
+      1.52
+   ],
+   [
+      "5.17.3",
+      1.53,
+      1.55
+   ],
+   [
+      "5.17.4",
+      1.56,
+      1.58
+   ],
+   [
+      "5.17.5",
+      1.57,
+      1.58
+   ],
+   [
+      "5.17.6",
+      1.57,
+      1.54
+   ],
+   [
+      "5.17.7",
+      1.51,
+      1.57
+   ],
+   [
+      "5.17.8",
+      1.56,
+      1.58
+   ],
+   [
+      "5.17.9",
+      1.55,
+      1.57
+   ],
+   [
       "5.18.0",
       1.55,
       1.59
@@ -132,6 +182,61 @@
    [
       "5.18.4",
       1.57,
+      1.59
+   ],
+   [
+      "5.19.1",
+      1.55,
+      1.6
+   ],
+   [
+      "5.19.2",
+      1.57,
+      1.59
+   ],
+   [
+      "5.19.3",
+      1.56,
+      1.57
+   ],
+   [
+      "5.19.4",
+      1.56,
+      1.56
+   ],
+   [
+      "5.19.5",
+      1.54,
+      1.56
+   ],
+   [
+      "5.19.6",
+      1.58,
+      1.58
+   ],
+   [
+      "5.19.7",
+      1.57,
+      1.56
+   ],
+   [
+      "5.19.8",
+      1.55,
+      1.55
+   ],
+   [
+      "5.19.9",
+      1.58,
+      1.56
+   ],
+   [
+      "5.19.10",
+      1.55,
+      1.56
+   ],
+   [
+      "5.19.11",
+      1.54,
       1.59
    ],
    [
@@ -257,7 +362,10 @@
     </script>
   </head>
   <body>
+    <h1>Perl::Formance - perlstone2015-f - regex.code_runtime(F)</h1>
     <ul>
+        <li>Back to <a href="index.html">dashboard</a></li>
+        <li>Raw numbers: <a href="raw-numbers.txt">here</a></li>
         <li>Benchmark code: <a href="https://metacpan.org/pod/Benchmark::Perl::Formance::Plugin::PerlStone2015::regex">Benchmark::Perl::Formance::Plugin::PerlStone2015::regex</a></li>
     </ul>
     <div id="chart_div" style="width: 700px; height: 500px;"></div>
