--- a/results/perlstone2015-f/regex-runtime_comp-FASTMODE.html
+++ b/results/perlstone2015-f/regex-runtime_comp-FASTMODE.html
@@ -15,6 +15,11 @@
       "regex.runtime_comp(F)/nothreads"
    ],
    [
+      "5.10.1",
+      null,
+      1.28
+   ],
+   [
       "5.13.1",
       2.32,
       1.96
@@ -125,6 +130,51 @@
       1.84
    ],
    [
+      "5.17.1",
+      2.19,
+      2.29
+   ],
+   [
+      "5.17.2",
+      2.37,
+      2.17
+   ],
+   [
+      "5.17.3",
+      2.7,
+      2.23
+   ],
+   [
+      "5.17.4",
+      2.33,
+      2.49
+   ],
+   [
+      "5.17.5",
+      2.46,
+      2.13
+   ],
+   [
+      "5.17.6",
+      2.24,
+      3.12
+   ],
+   [
+      "5.17.7",
+      2.48,
+      2.66
+   ],
+   [
+      "5.17.8",
+      2.59,
+      2.66
+   ],
+   [
+      "5.17.9",
+      3.17,
+      2.54
+   ],
+   [
       "5.18.0",
       2.29,
       2.07
@@ -132,6 +182,61 @@
    [
       "5.18.4",
       2.54,
+      2.39
+   ],
+   [
+      "5.19.1",
+      2.5,
+      2.49
+   ],
+   [
+      "5.19.2",
+      2.55,
+      2.38
+   ],
+   [
+      "5.19.3",
+      2.41,
+      2.21
+   ],
+   [
+      "5.19.4",
+      2.89,
+      2.48
+   ],
+   [
+      "5.19.5",
+      2.2,
+      2.41
+   ],
+   [
+      "5.19.6",
+      2.48,
+      2.12
+   ],
+   [
+      "5.19.7",
+      2.52,
+      2.19
+   ],
+   [
+      "5.19.8",
+      2.26,
+      2.5
+   ],
+   [
+      "5.19.9",
+      2.46,
+      2.42
+   ],
+   [
+      "5.19.10",
+      2.52,
+      2.71
+   ],
+   [
+      "5.19.11",
+      3.02,
       2.39
    ],
    [
@@ -257,7 +362,10 @@
     </script>
   </head>
   <body>
+    <h1>Perl::Formance - perlstone2015-f - regex.runtime_comp(F)</h1>
     <ul>
+        <li>Back to <a href="index.html">dashboard</a></li>
+        <li>Raw numbers: <a href="raw-numbers.txt">here</a></li>
         <li>Benchmark code: <a href="https://metacpan.org/pod/Benchmark::Perl::Formance::Plugin::PerlStone2015::regex">Benchmark::Perl::Formance::Plugin::PerlStone2015::regex</a></li>
     </ul>
     <div id="chart_div" style="width: 700px; height: 500px;"></div>
