--- a/results/perlstone2015-f/regex-split1-FASTMODE.html
+++ b/results/perlstone2015-f/regex-split1-FASTMODE.html
@@ -15,6 +15,11 @@
       "regex.split1(F)/nothreads"
    ],
    [
+      "5.10.1",
+      null,
+      0.84
+   ],
+   [
       "5.13.1",
       0.84,
       0.98
@@ -125,6 +130,51 @@
       0.91
    ],
    [
+      "5.17.1",
+      0.89,
+      0.9
+   ],
+   [
+      "5.17.2",
+      0.88,
+      0.85
+   ],
+   [
+      "5.17.3",
+      0.92,
+      0.83
+   ],
+   [
+      "5.17.4",
+      0.76,
+      0.82
+   ],
+   [
+      "5.17.5",
+      0.9,
+      0.96
+   ],
+   [
+      "5.17.6",
+      0.97,
+      1.21
+   ],
+   [
+      "5.17.7",
+      0.84,
+      1.04
+   ],
+   [
+      "5.17.8",
+      0.92,
+      0.89
+   ],
+   [
+      "5.17.9",
+      0.92,
+      0.89
+   ],
+   [
       "5.18.0",
       1.03,
       1.02
@@ -133,6 +183,61 @@
       "5.18.4",
       1,
       0.94
+   ],
+   [
+      "5.19.1",
+      0.86,
+      1.01
+   ],
+   [
+      "5.19.2",
+      0.93,
+      1.08
+   ],
+   [
+      "5.19.3",
+      0.89,
+      0.93
+   ],
+   [
+      "5.19.4",
+      0.94,
+      0.9
+   ],
+   [
+      "5.19.5",
+      0.96,
+      0.9
+   ],
+   [
+      "5.19.6",
+      0.96,
+      0.84
+   ],
+   [
+      "5.19.7",
+      0.91,
+      1.04
+   ],
+   [
+      "5.19.8",
+      1.01,
+      0.93
+   ],
+   [
+      "5.19.9",
+      1.09,
+      0.95
+   ],
+   [
+      "5.19.10",
+      0.86,
+      0.98
+   ],
+   [
+      "5.19.11",
+      1,
+      0.95
    ],
    [
       "5.20.0",
@@ -257,7 +362,10 @@
     </script>
   </head>
   <body>
+    <h1>Perl::Formance - perlstone2015-f - regex.split1(F)</h1>
     <ul>
+        <li>Back to <a href="index.html">dashboard</a></li>
+        <li>Raw numbers: <a href="raw-numbers.txt">here</a></li>
         <li>Benchmark code: <a href="https://metacpan.org/pod/Benchmark::Perl::Formance::Plugin::PerlStone2015::regex">Benchmark::Perl::Formance::Plugin::PerlStone2015::regex</a></li>
     </ul>
     <div id="chart_div" style="width: 700px; height: 500px;"></div>
