--- a/results/perlstone2015-f/regex-split2-FASTMODE.html
+++ b/results/perlstone2015-f/regex-split2-FASTMODE.html
@@ -15,6 +15,11 @@
       "regex.split2(F)/nothreads"
    ],
    [
+      "5.10.1",
+      null,
+      1.4
+   ],
+   [
       "5.13.1",
       1.51,
       1.38
@@ -125,6 +130,51 @@
       1.48
    ],
    [
+      "5.17.1",
+      1.49,
+      1.49
+   ],
+   [
+      "5.17.2",
+      0.44,
+      0.43
+   ],
+   [
+      "5.17.3",
+      1.53,
+      1.58
+   ],
+   [
+      "5.17.4",
+      1.45,
+      1.52
+   ],
+   [
+      "5.17.5",
+      1.15,
+      1.14
+   ],
+   [
+      "5.17.6",
+      1.14,
+      1.08
+   ],
+   [
+      "5.17.7",
+      1.01,
+      0.96
+   ],
+   [
+      "5.17.8",
+      0.93,
+      0.95
+   ],
+   [
+      "5.17.9",
+      0.91,
+      0.95
+   ],
+   [
       "5.18.0",
       1.05,
       1.07
@@ -133,6 +183,61 @@
       "5.18.4",
       1.05,
       1.06
+   ],
+   [
+      "5.19.1",
+      0.9,
+      0.94
+   ],
+   [
+      "5.19.2",
+      0.92,
+      0.96
+   ],
+   [
+      "5.19.3",
+      0.92,
+      0.94
+   ],
+   [
+      "5.19.4",
+      0.91,
+      0.98
+   ],
+   [
+      "5.19.5",
+      0.91,
+      0.95
+   ],
+   [
+      "5.19.6",
+      0.95,
+      0.95
+   ],
+   [
+      "5.19.7",
+      0.91,
+      0.96
+   ],
+   [
+      "5.19.8",
+      1,
+      0.91
+   ],
+   [
+      "5.19.9",
+      0.96,
+      0.94
+   ],
+   [
+      "5.19.10",
+      0.98,
+      0.94
+   ],
+   [
+      "5.19.11",
+      0.96,
+      0.97
    ],
    [
       "5.20.0",
@@ -257,7 +362,10 @@
     </script>
   </head>
   <body>
+    <h1>Perl::Formance - perlstone2015-f - regex.split2(F)</h1>
     <ul>
+        <li>Back to <a href="index.html">dashboard</a></li>
+        <li>Raw numbers: <a href="raw-numbers.txt">here</a></li>
         <li>Benchmark code: <a href="https://metacpan.org/pod/Benchmark::Perl::Formance::Plugin::PerlStone2015::regex">Benchmark::Perl::Formance::Plugin::PerlStone2015::regex</a></li>
     </ul>
     <div id="chart_div" style="width: 700px; height: 500px;"></div>
