--- a/results/perlstone2015-f/regexdna-FASTMODE.html
+++ b/results/perlstone2015-f/regexdna-FASTMODE.html
@@ -15,6 +15,11 @@
       "regexdna(F)/nothreads"
    ],
    [
+      "5.10.1",
+      null,
+      2.14
+   ],
+   [
       "5.13.1",
       2.1,
       2.06
@@ -125,6 +130,51 @@
       2.05
    ],
    [
+      "5.17.1",
+      3.19,
+      3.34
+   ],
+   [
+      "5.17.2",
+      2.94,
+      3.24
+   ],
+   [
+      "5.17.3",
+      2.95,
+      3.13
+   ],
+   [
+      "5.17.4",
+      2.88,
+      3.07
+   ],
+   [
+      "5.17.5",
+      2.8,
+      3.09
+   ],
+   [
+      "5.17.6",
+      2.1,
+      2.17
+   ],
+   [
+      "5.17.7",
+      1.82,
+      1.91
+   ],
+   [
+      "5.17.8",
+      1.94,
+      1.97
+   ],
+   [
+      "5.17.9",
+      2.03,
+      1.95
+   ],
+   [
       "5.18.0",
       2.08,
       2.08
@@ -133,6 +183,61 @@
       "5.18.4",
       2.03,
       2.07
+   ],
+   [
+      "5.19.1",
+      1.62,
+      1.66
+   ],
+   [
+      "5.19.2",
+      1.7,
+      1.71
+   ],
+   [
+      "5.19.3",
+      1.77,
+      1.72
+   ],
+   [
+      "5.19.4",
+      1.68,
+      1.67
+   ],
+   [
+      "5.19.5",
+      1.73,
+      1.72
+   ],
+   [
+      "5.19.6",
+      1.67,
+      1.71
+   ],
+   [
+      "5.19.7",
+      1.36,
+      1.31
+   ],
+   [
+      "5.19.8",
+      1.37,
+      1.36
+   ],
+   [
+      "5.19.9",
+      1.48,
+      1.44
+   ],
+   [
+      "5.19.10",
+      1.45,
+      1.46
+   ],
+   [
+      "5.19.11",
+      1.47,
+      1.44
    ],
    [
       "5.20.0",
@@ -257,7 +362,10 @@
     </script>
   </head>
   <body>
+    <h1>Perl::Formance - perlstone2015-f - regexdna(F)</h1>
     <ul>
+        <li>Back to <a href="index.html">dashboard</a></li>
+        <li>Raw numbers: <a href="raw-numbers.txt">here</a></li>
         <li>Benchmark code: <a href="https://metacpan.org/pod/Benchmark::Perl::Formance::Plugin::PerlStone2015::regexdna">Benchmark::Perl::Formance::Plugin::PerlStone2015::regexdna</a></li>
     </ul>
     <div id="chart_div" style="width: 700px; height: 500px;"></div>
