--- a/results/perlstone2015-f/spectralnorm-FASTMODE.html
+++ b/results/perlstone2015-f/spectralnorm-FASTMODE.html
@@ -15,6 +15,11 @@
       "spectralnorm(F)/nothreads"
    ],
    [
+      "5.10.1",
+      null,
+      6.54
+   ],
+   [
       "5.13.1",
       6.68,
       6.55
@@ -125,6 +130,51 @@
       6.67
    ],
    [
+      "5.17.1",
+      12.63,
+      13.73
+   ],
+   [
+      "5.17.2",
+      11.58,
+      12.57
+   ],
+   [
+      "5.17.3",
+      11.52,
+      12.55
+   ],
+   [
+      "5.17.4",
+      10.82,
+      11.62
+   ],
+   [
+      "5.17.5",
+      10.67,
+      11.62
+   ],
+   [
+      "5.17.6",
+      6.56,
+      6.73
+   ],
+   [
+      "5.17.7",
+      5.49,
+      5.47
+   ],
+   [
+      "5.17.8",
+      5.45,
+      5.47
+   ],
+   [
+      "5.17.9",
+      5.43,
+      5.48
+   ],
+   [
       "5.18.0",
       6.69,
       6.67
@@ -133,6 +183,61 @@
       "5.18.4",
       6.7,
       6.67
+   ],
+   [
+      "5.19.1",
+      5.57,
+      5.39
+   ],
+   [
+      "5.19.2",
+      5.52,
+      5.34
+   ],
+   [
+      "5.19.3",
+      5.59,
+      5.51
+   ],
+   [
+      "5.19.4",
+      5.5,
+      5.4
+   ],
+   [
+      "5.19.5",
+      5.54,
+      5.45
+   ],
+   [
+      "5.19.6",
+      5.58,
+      5.53
+   ],
+   [
+      "5.19.7",
+      3.13,
+      3.17
+   ],
+   [
+      "5.19.8",
+      3.11,
+      3.11
+   ],
+   [
+      "5.19.9",
+      3.12,
+      3.17
+   ],
+   [
+      "5.19.10",
+      3.12,
+      3.11
+   ],
+   [
+      "5.19.11",
+      3.2,
+      3.11
    ],
    [
       "5.20.0",
@@ -257,7 +362,10 @@
     </script>
   </head>
   <body>
+    <h1>Perl::Formance - perlstone2015-f - spectralnorm(F)</h1>
     <ul>
+        <li>Back to <a href="index.html">dashboard</a></li>
+        <li>Raw numbers: <a href="raw-numbers.txt">here</a></li>
         <li>Benchmark code: <a href="https://metacpan.org/pod/Benchmark::Perl::Formance::Plugin::PerlStone2015::spectralnorm">Benchmark::Perl::Formance::Plugin::PerlStone2015::spectralnorm</a></li>
     </ul>
     <div id="chart_div" style="width: 700px; height: 500px;"></div>
